--- a/about/about.css
+++ b/about/about.css
@@ -2,7 +2,7 @@ body {
     padding: 0;
     margin: 0;
     margin-top: 0;
-    background-image: url("about/Skytree.JPG");
+    background-image: url("http://aliyareneekhan.github.io/about/Skytree.JPG");
     background-size: 100%;
 }
 
